Fix code tags inside admonotion blocks in dark mode, closes #1519

--- a/assets/less/night/content/general.less
+++ b/assets/less/night/content/general.less
@@ -45,3 +45,8 @@ a.view-source {
 img[src*="#gh-light-mode-only"] {
   display: none;
 }
+
+blockquote code {
+  background-color: @codeBackground;
+  border: 1px solid darken(@codeBackground, 10%);
+}
