--- a/assets/less/night/night.less
+++ b/assets/less/night/night.less
@@ -19,6 +19,6 @@ body.night-mode {
 
   blockquote {
     border-left: 3px solid rgb(68, 68, 76);
-    background-color: rgb(44, 44, 49)
+    background-color: rgb(44, 44, 49);
   }
 }
